k8s/peer-authentication-service-a.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls-service-a
  namespace: skais-2-test
spec:
  selector:
    matchLabels:
      app: label-service-a
  mtls:
    mode: STRICT
