k8s/peer-authentication-service-b.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls-service-b
  namespace: skais-2-test
spec:
  selector:
    matchLabels:
      app: label-service-b
      # Target for mTLS enforcement. Must exactly match the pod label:
      # Deployment.spec.template.metadata.labels.app --> "label-service-b"
  mtls:
    mode: STRICT
