k8s/deployment-service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service-a
  namespace: skais-2-test
spec:

  replicas: 1
  selector:
    matchLabels:
      app: label-service-a
  template:
    metadata:
      labels:
        app: label-service-a # PeerAuthentication.matchLabels !!!
    spec:
      serviceAccountName: service-a-sa
      containers:
        - name: java-app
          image: skais-microservice-example:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
