k8s/deployment-service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service-b
  namespace: skais-2-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: label-service-b
  template:
    metadata:
      labels:
        app: label-service-b # PeerAuthentication.matchLabels !!!
    spec:
      serviceAccountName: service-b-sa
      containers:
        - name: java-app
          image: skais-microservice-example:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
