k8s/service-a-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a-svc
  namespace: skais-2-test
spec:
  selector:
    app: label-service-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
