k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: skais-2-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Switch traffic from ingress to Istio
    # Forces NGINX to route traffic through the ClusterIP Service instead of direct Pod IPs
    # Needed for VirtualService
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service-a(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-a-svc
                port:
                  number: 8080

          - path: /service-b(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-b-svc
                port:
                  number: 8080
