k8s/authorization-policy-service-a.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: block-b-to-a
  namespace: skais-2-test
spec:
  selector:
    matchLabels:
      app: service-a # Defence target
  action: DENY
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/skais-2-test/sa/service-b-sa"]
